# Ainekio-bot

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  simulator bridge progress scratchpad.md  start-ainekio-adapter.sh  start-ainekio-sim-stack.sh  start-simulator-shim.sh  start.sh  stop.sh
.github/workflows/: deploy.yml
Emulator/: README.md  __init__.py  start-ainekio-adapter.sh  start-ainekio-sim-stack.sh  start-protocol-v1-emulator.sh  start-protocol-v1-stack.sh  start-simulator-shim.sh
Emulator/emulator/: CMakeLists.txt  README.md  __init__.py  faults.py
Emulator/emulator/backends/: __init__.py  sesame.py  sesame_shim.py
Emulator/emulator/body/: __init__.py  __main__.py  assets.py  audio.py  battery.py  calibration.py  client.py  core.py  core_bridge.c  display.py  host_media.py  media.py  session.py
Emulator/legacy/motion/: README.md  config.example.json  pyproject.toml
Emulator/sesame-robot-sim/: README.md  run.sh
Emulator/sesame-robot-sim/app/: 115.js  1195.js  1755.js  2339.js  3071.js  3107.js  3235.js  3267.js  3507.js  3564.js  3647.js  3692.js  3815.js  3979.js  4095.js  430.js  4305.js  4467.js  4627.js  4867.js  499.js  5179.js  5391.js  5565.js  5843.js  6023.js  6247.js  6367.js  6547.js  7219.js  7379.js  7523.js  7571.js  7663.js  7791.js  7841.js  8292.js  8339.js  8749.js  8887.js  (+14 more)
Emulator/sesame-robot-sim/bridge/: README.md
Emulator/sesame-robot-sim/source/: SOURCE.md
Emulator/tests/: __init__.py  support.py  test_assets.py  test_battery.py  test_environment_adapter.py  test_environment_command_catalog.py  test_faults.py  test_gateway_bridge.py  test_gateway_dashboard.py  test_gateway_handshake_timeout.py  test_gateway_security.py  test_gateway_service.py  test_golden_fixtures.py  test_media.py  test_portable_core.py  test_sesame_backend.py  test_sesame_shim.py  test_session.py  test_websocket_integration.py
Emulator/tools/: dashboard_browser_acceptance.mjs  run_acceptance.py
Master/: README.md  ainekio-gateway.service  configure-physical-relay-dns.py  start-physical-gateway.sh  start-physical-relay.sh
Master/gateway/: README.md  __init__.py  plugins.py  security.py  tts_client.py
Master/gateway/bridge_client/: __init__.py  client.py  integration.py
Master/gateway/dashboard/: __init__.py  auth.py  server.py
Master/gateway/environment_adapter/: __init__.py  server.py  translation.py
Master/gateway/server/: __init__.py  __main__.py  service.py  stub.py
Slave/: README.md
Slave/firmware/esp32s3/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
Slave/firmware/esp32s3/components/ainekio_platform/: CMakeLists.txt  Kconfig
Slave/firmware/esp32s3/components/ainekio_platform/include/ainekio/platform/: asset_store.h  audio_service.h  battery_adc.h  camera_service.h  display_service.h  local_discovery.h  mcpwm_adapter.h  motion_service.h  nvs_adapter.h  pin_map.h  provisioning_portal.h  provisioning_service.h  runtime_service.h  sd_service.h  sleep_service.h  telemetry_service.h  wake_word_service.h  wifi_adapter.h
Slave/firmware/esp32s3/components/ainekio_platform/src/: asset_store.c  audio_service.c  battery_adc.c  camera_service.c  display_service.c  local_discovery.c  mcpwm_adapter.c  motion_service.c  nvs_adapter.c  pin_map.c  provisioning_portal.c  provisioning_service.c  runtime_service.c  sd_service.c  sleep_service.c  telemetry_service.c  wake_word_service.cpp  wifi_adapter.c
Slave/software/core/: CMakeLists.txt  README.md
Slave/software/core/include/ainekio/: assets.h  battery.h  binary_codec.h  config_schema.h  config_store.h  control_codec.h  control_encode.h  core.h  protocol.h  provisioning.h  provisioning_portal.h  sd_record.h  servo.h  settings.h
Slave/software/core/src/: assets.c  battery.c  binary_codec.c  config_store.c  control_codec.c  control_encode.c  core.c  protocol.c  provisioning.c  provisioning_portal.c  sd_record.c  servo.c  settings.c
Slave/software/core/tests/: binary_decode_cli.c  control_decode_cli.c  run_binary_fixtures.py  run_control_fixtures.py  test_assets.c  test_config_store.c  test_control_encode.c  test_core.c  test_provisioning.c  test_provisioning_portal.c  test_sd_record.c  test_servo_battery.c  test_settings.c
Slave/software/protocol/: README.md  __init__.py  control_v1.py  joints_v1.py
Slave/software/tests/: __init__.py  test_package_micro_wake_word.py
Slave/software/tools/: convert_sesame_assets.py  package_micro_wake_word.py  prepare_local_wake_word_pilot.py  run_local_wake_word.sh
apps/site/: astro.config.mjs  package.json  readme.md
apps/site/public/: CNAME
apps/site/src/: content.config.ts
docs/: AINEKIO_METAHUMAN_CLOSED_LOOP_STATUS.md  Ainekio - Software & System Discussion (v2).docx  Ainekio - Software & System Discussion.docx  Ainekio - Spec v0.6 Amendment 1 (FINAL) + Freeze.docx  Ainekio - System Specification v0.3.docx  Ainekio - System Specification v1.0.docx  Ainekio Plan Peer Review Audit.md  BRIDGE_HARDENING_PLAN.md  CLOUDFLARE_ROBOT_RELAY_DEPLOYMENT.md  FIRMWARE_EFFICIENCY_AUDIT_2026-07-22.md  HARDWARE_BRINGUP_CHECKLIST.md  LOCAL_WAKE_WORD.md  MOTION_MODULE_PROGRESS.md  PINOUT_DIAGNOSTICS.md  README.md  REPOSITORY_MAP.md  SLAVE_BRAIN_PROGRESS.md  freestyle-movement.md  token-generate.md
docs/archive/: README.md  simulator-bridge-progress-scratchpad.md
docs/archive/specifications/: Ainekio - System Specification v0.6.docx
motion/: README.md  config.example.json  pyproject.toml
motion/src/ainekio_motion/: __init__.py  backend.py  bridge.py  cli.py  commands.py  config.py  metahuman.py  sequences.py  simulator_shim.py  types.py
motion/tests/: test_bridge.py  test_commands.py  test_config.py  test_sequences.py  test_simulator_shim.py
simulators/sesame-robot-sim/: README.md
simulators/sesame-robot-sim/app/: 1039.js  1299.js  1387.js  1896.js  1941.js  2257.js  2571.js  2601.js  2817.js  2919e8aac63bd42d.module.wasm  3005.js  3749.js  3983.js  4135.js  4323.js  4485.js  4707.js  5019.js  5198.js  5495.js  5591.js  5659.js  5723.js  5813.js  5891.js  6123.js  6579.js  6621.js  (+23 more)
(+156 files in other folders)
